--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.21.7"
+httparse = "1.8.0"
+sha1 = "0.10.6"
 tokio = { version = "1.36.0", features = ["full"] }
